fixed margin spacing and article sizing on the blog section

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -286,12 +286,11 @@ a {
 }
 .main .blog .blogs {
   display: flex;
-  padding-right: 4em;
+  padding-right: 1em;
 }
 .main .blog .blogs .blog-post {
-  border: 1px solid white;
   width: 25%;
-  margin-right: 2em;
+  margin-right: 1.2em;
   box-shadow: 0px 0px 9px 0px #46464717;
   padding-bottom: 4em;
 }
