--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -192,13 +192,13 @@ a {
 
         .blogs {
             display: flex;
-            padding-right: 4em;
+            padding-right: 1em;
 
             .blog-post {
 
-                border: 1px solid white;
+                // border: 1px solid white;
                 width: 25%;
-                margin-right: 2em;
+                margin-right: 1.2em;
                 box-shadow: 0px 0px 9px 0px #46464717;
                 padding-bottom: 4em;
 
